--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -7,6 +7,20 @@
     android:background="@drawable/gradient_main">
 
     <EditText
+        android:id="@+id/userNameCreate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:hint="Username"
+        android:tooltipText="Gib deinen Usernamen ein"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
         android:id="@+id/emailCreate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,11 +28,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:hint="E-Mail"
-        android:tooltipText="Gib deinen Usernamen ein"
+        android:tooltipText="Gib deine Email ein"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintTop_toBottomOf="@id/userNameCreate" />
 
     <EditText
         android:id="@+id/passwordCreate"
